--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 logging.level.root=info
 logging.level.us.vicentini.extranjeria=info
 logging.level.com.gargoylesoftware.htmlunit=off
+
+
+login.username=
+login.password=
