Implements status detection and Telegram notification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ login.username=ENC(lsDQJEIWUZAoC/6LxQgxEw3ot2jHdkxSlCSr9kKzHSo=)
 login.password=ENC(f6I0iNEE2Y2E8rrLXgOws16cH5M1vaXz)
 
 jasypt.encryptor.password=
+
+reserva.invalidStatus=Pronto Abrir,Sin Atenci\u00f3n,No Disponible
