--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ defaultTasks 'clean', 'build'
 
 buildscript {
     ext {
-        springBootVersion = '1.5.17.RELEASE'
+        springBootVersion = '2.1.7.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -31,6 +31,9 @@ dependencies {
     compile 'com.github.ulisesbocchio:jasypt-spring-boot-starter:1.18'
 //    implementation('org.springframework.boot:spring-boot-starter-web')
     compile 'net.sourceforge.htmlunit:htmlunit:2.33'
-    compileOnly('org.projectlombok:lombok')
+    compileOnly "org.projectlombok:lombok:1.18.8"
+    testCompileOnly "org.projectlombok:lombok:1.18.8"
+    annotationProcessor "org.projectlombok:lombok:1.18.8"
+    testAnnotationProcessor "org.projectlombok:lombok:1.18.8"
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
